# python_piscine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  run.sh
00_python_starting/: Makefile  README.md
00_python_starting/ex01/: format_ft_time.py
00_python_starting/ex02/: find_ft_type.py
00_python_starting/ex03/: NULL_not_found.py  tester.py
00_python_starting/ex04/: whatis.py
00_python_starting/ex05/: building.py
00_python_starting/ex06/: filterstring.py  ft_filter.py
00_python_starting/ex07/: sos.py
00_python_starting/ex08/: Loading.py
00_python_starting/ex09/ft_package/: pyproject.toml
00_python_starting/ex09/ft_package/ft_package/: count.py
01_python_array/: .gitignore  Makefile  README.md
01_python_array/ex00/: give_bmi.py
01_python_array/ex01/: array2D.py  tester.py
01_python_array/ex02/: load_image.py  tester.py
01_python_array/ex03/: load_image.py  zoom.py
01_python_array/ex04/: load_image.py  rotate.py
01_python_array/ex05/: load_image.py  pimp_image.py  tester.py
02_python_data_table/: README.md
02_python_data_table/ex00/: load_csv.py  tester.py
02_python_data_table/ex01/: aff_life.py  load_csv.py  tester.py
02_python_data_table/ex02/: aff_pop.py  load_csv.py
02_python_data_table/ex03/: projection_life.py
03_python_oop/: README.md
03_python_oop/ex01/: S1E7.py  S1E9.py  tester.py
03_python_oop/ex02/: DiamondTrap.py  S1E7.py  S1E9.py
03_python_oop/ex03/: ft_calculator.py
03_python_oop/ex04/: ft_calculator.py
04_python_Dod/: README.md
04_python_Dod/ex00/: statistics.py
04_python_Dod/ex01/: in_out.py
04_python_Dod/ex02/: callLimit.py
04_python_Dod/ex03/: new_student.py
04_python_data_oriented_design/ex00/: statistics.py
ex00/: Hello.py
ex01/: format_ft_time.py
ex02/: find_ft_type.py
ex03/: NULL_not_found.py  tester.py
ex04/: whatis.py
ex05/: building.py
ex06/: filterstring.py
ex07/: sos.py
ex08/: Loading.py  tester.py
ex09/ft_package/: Readme.md
ex09/ft_package/ft_package/: __init__.py  count.py
