[project]
name = "python-piscine"
version = "0.1.0"
description = "A comprehensive Python learning journey through progressive modules covering fundamentals, data science, OOP, and advanced programming concepts"
readme = "README.md"
authors = [
    {name = "Python Piscine Contributors"}
]
license = {text = "MIT"}
keywords = ["python", "education", "programming", "data-science", "oop", "learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "autopep8>=2.3.2",
    "black>=25.1.0",
    "docformatter>=1.7.7",
    "pandas>=2.2.3",
    "status>=0.2.5",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "autopep8>=2.3.2",
    "pre-commit>=4.3.0",
    "matplotlib>=3.10.5",
]

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]
